--- a/src/app/scripts/scripts.html
+++ b/src/app/scripts/scripts.html
@@ -10,6 +10,7 @@
             <data-sag-container data-menu="scriptsCtrl.menuScript"
                                 data-size="1"
                                 data-title="script.name"
+                                data-type="'script'"
                                 data-element="script">
 				<data-sag-script data-element="script"></data-sag-script>
 			</data-sag-container>
