--- a/src/app/sensors/sensors.html
+++ b/src/app/sensors/sensors.html
@@ -6,6 +6,7 @@
             <data-sag-container data-menu="sensorsCtrl.menuSensor"
                                 data-size="1"
                                 data-title="sensor.display"
+                                data-type="'sensor'"
                                 data-element="sensor">
                 <data-sag-sensor data-element="sensor"></data-sag-sensor>
             </data-sag-container>
