--- a/src/app/service/service.html
+++ b/src/app/service/service.html
@@ -15,6 +15,7 @@
 								data-menu="serviceCtrl.menu"
 								data-size="1"
 								data-title="element.display || element.name"
+								data-type="element.type"
 								data-element="element">
 				<div data-sag-generic-injector data-type="element.type" data-elt="element"></div>
 			</data-sag-container>
