--- a/src/app/switches/switches.html
+++ b/src/app/switches/switches.html
@@ -7,6 +7,7 @@
             <data-sag-container data-menu="switchesCtrl.menuSwitcher"
                                 data-size="1"
                                 data-title="switcher.display"
+                                data-type="'switch'"
                                 data-element="switcher">
 				<data-sag-switch data-element="switcher"></data-sag-switch>
 			</data-sag-container>
@@ -19,6 +20,7 @@
             <data-sag-container data-menu="switchesCtrl.menuDimmer"
                                 data-size="1"
                                 data-title="dimmer.display"
+                                data-type="'dimmer'"
                                 data-element="dimmer">
                 <data-sag-dimmer data-element="dimmer"></data-sag-dimmer>
             </data-sag-container>
