--- a/src/components/container/container.less
+++ b/src/components/container/container.less
@@ -1,4 +1,5 @@
 .sag-container-header-menu {
+	z-index: 100;
 }
 
 .sag-container-header-title-dashboard {
@@ -27,16 +28,17 @@
 
 .sag-container {
   border-radius: 10px;
-  border: 2px solid;
   margin: 5px;
   padding-top: 5px;
   padding-bottom: 5px;
+  background-color: #cccccc;
 }
 
 .sag-container-element  {
   padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
+  margin-top: 5px;
 }
 
 .element-label {
