--- a/src/components/topLeftMenu/topLeftMenu.less
+++ b/src/components/topLeftMenu/topLeftMenu.less
@@ -1,5 +1,10 @@
 .top-left-menu {
-    position: absolute;
+    position:fixed;
     top: 10px;
     left: 10px;
+    z-index: 150;
+}
+
+.top-left-menu-list {
+	z-index: 200;
 }
