--- a/src/components/topRightMenu/topRightMenu.template.html
+++ b/src/components/topRightMenu/topRightMenu.template.html
@@ -2,7 +2,7 @@
     <button class="btn btn-primary text-left" type="button" data-uib-dropdown-toggle>
         <i class="fa fa-user" aria-hidden="true"></i>
     </button>
-	<ul class="container-fluid dropdown-menu dropdown-menu-right" data-uib-dropdown-menu data-uib-dropdown-menu-auto-close="outsideClick" data-ng-click="$event.stopPropagation()">
+	<ul class="container-fluid dropdown-menu dropdown-menu-right top-right-menu-list" data-uib-dropdown-menu data-uib-dropdown-menu-auto-close="outsideClick" data-ng-click="$event.stopPropagation()">
 		<li class="row control-group" data-ng-if="topRightMenuCtrl.sagremorParams.loggedIn">
 			<div class="col-md-6 controls">
 				<label for="admin-mode" data-translate="top_right_menu_admin_mode"></label>
