--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -31,6 +31,7 @@
                                             data-title="w.element.display || w.element.name"
                                             data-element="w"
                                             data-dashboard="true"
+                                            data-type="w.type"
                                             data-sag-params="DashboardCtrl.sagremorParams">
                             <div data-sag-generic-injector data-type="w.type" data-elt="w.element"></div>
                         </data-sag-container>
