--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -11,6 +11,7 @@
             <data-sag-container data-menu="eventsCtrl.menuScheduler"
                                 data-size="1"
                                 data-title="scheduler.name"
+                                data-type="'scheduler'"
                                 data-element="scheduler">
 				<data-sag-scheduler data-element="scheduler"></data-sag-scheduler>
 			</data-sag-container>
