--- a/src/app/heaters/heaters.html
+++ b/src/app/heaters/heaters.html
@@ -6,6 +6,7 @@
             <data-sag-container data-menu="heatersCtrl.menuSensor"
                                 data-size="1"
                                 data-title="heater.display"
+                                data-type="'heater'"
                                 data-element="heater">
 				<data-sag-heater data-element="heater"></data-sag-heater>
 			</data-sag-container>
