--- a/src/components/modals/edit.modal.html
+++ b/src/components/modals/edit.modal.html
@@ -1,11 +1,10 @@
-
 <div class="modal-content">
     <div class="modal-header">
-        <h3 class="modal-title">{{EditModalCtrl.title}}</h3>
+        <h3 class="modal-title" data-ng-bind="EditModalCtrl.title"></h3>
     </div>
     <div class="modal-body">
         <div class="row" style="margin: 5px;">
-            <span>{{EditModalCtrl.message}}</span>
+            <span data-ng-bind="EditModalCtrl.message"></span>
         </div>
         <div class="row control-group" style="margin: 5px;">
 			<div class="controls">
