--- a/src/components/topRightMenu/topRightMenu.less
+++ b/src/components/topRightMenu/topRightMenu.less
@@ -1,5 +1,10 @@
 .top-right-menu {
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 10px;
+    z-index: 150;
+}
+
+.top-right-menu-list {
+	z-index: 200;
 }
