--- a/src/components/event/event.modal.html
+++ b/src/components/event/event.modal.html
@@ -215,6 +215,43 @@
 						data-ng-model="EventModalCtrl.scheduler.remove_after">
             </div>
 		</div>
+		
+        <div class="row control-group" data-ng-if="EventModalCtrl.eventType === 'trigger'">
+			<!-- Trigger source selection -->
+            <label for="triggerSource" class="col-md-5" data-translate="event_trigger_source"></label>
+            <div class="col-md-7 controls">
+                <select id="triggerSource" 
+						class="form-control" 
+						data-ng-model="EventModalCtrl.trigger" 
+						data-ng-options="element as element.display for element in EventModalCtrl.globalTriggerElementList track by EventModalCtrl.trackTriggerElement(element)">
+                </select>
+            </div>
+            
+			<!-- Message trigger -->
+			<div class="control-group">
+				<label for="newTriggerMessage" class="col-md-5" data-translate="event_trigger_message"></label>
+				<div class="col-md-5 controls">
+				</div>
+				<div class="col-md-3">
+					<select id="newTriggerMessageOperator"
+							name="newTriggerMessageOperator"
+							class="form-control"
+							data-ng-model="EventModalCtrl.event.message_match">
+						<option value="0"></option>
+						<option value="1" data-translate="message_match_equal"></option>
+						<option value="2" data-translate="message_match_different"></option>
+						<option value="3" data-translate="message_match_contains"></option>
+						<option value="4" data-translate="message_match_not_contains"></option>
+						<option value="5" data-translate="message_match_empty"></option>
+						<option value="6" data-translate="message_match_not_empty"></option>
+					</select>
+				</div>
+				<div class="col-md-4" data-ng-if="EventModalCtrl.event.message_match <= 4">
+					<input type="text" class="form-control" name="newTriggerMessageValue" id="newTriggerMessageValue" data-ng-model="EventModalCtrl.event.message">
+				</div>
+			</div>
+			
+		</div>
 		<hr>
 		
 		<!-- Scripts to run -->
@@ -270,7 +307,7 @@
                 <select id="eventconditionAdd"
 						class="form-control"
 						data-ng-model="EventModalCtrl.newConditionType"
-						data-ng-options="condition as EventModalCtrl.tr(condition.label) for condition in EventModalCtrl.globalConditionList">
+						data-ng-options="condition as EventModalCtrl.tr(condition.label) for condition in EventModalCtrl.globalElementList">
                 </select>
             </div>
         </div>
@@ -452,13 +489,13 @@
 								class="form-control"
 								data-ng-model="EventModalCtrl.tmpElement" 
 								data-ng-change="EventModalCtrl.setActionCarleonElement()"
-								data-ng-options="element as element.name for element in EventModalCtrl.carleonElementsList[EventModalCtrl.newConditionType.name] track by EventModalCtrl.trackCarleonElement(element, EventModalCtrl.newConditionType.name)">
+								data-ng-options="element as element.name for element in EventModalCtrl.carleonConditionElementsList[EventModalCtrl.newConditionType.name] track by EventModalCtrl.trackCarleonElement(element, EventModalCtrl.newConditionType.name)">
 						</select>
 					</div>
 				</div>
 				
 				<div class="control-group" 
-					data-ng-repeat="parameter in EventModalCtrl.carleonCommandsParameters[EventModalCtrl.newConditionType.name]">
+					data-ng-repeat="parameter in EventModalCtrl.carleonConditionCommandsParameters[EventModalCtrl.newConditionType.name]">
 					<label for="{{EventModalCtrl.newConditionType.name + '$' + parameter.name}}" class="col-md-5" data-ng-bind="parameter.title"></label>
 					<div class="col-md-7 controls" data-ng-class="{'has-error': (parameter.required && !EventModalCtrl.newCondition.parameters[parameter.name] && EventModalCtrl.newCondition.parameters[parameter.name] !== 0)}">
 						<input type="text" class="form-control" name="{{EventModalCtrl.newConditionType.name + '$' + parameter.name}}" id="{{EventModalCtrl.newConditionType.name + '$' + parameter.name}}" data-ng-if="parameter.type === 'string'" data-ng-model="EventModalCtrl.newCondition.parameters[parameter.name]">
@@ -483,9 +520,9 @@
 						<select id="newConditionCarleonParameter" 
 								name="newConditionCarleonParameter" 
 								class="form-control"
-								data-ng-init="EventModalCtrl.tmpResult = EventModalCtrl.carleonResultParameters[EventModalCtrl.newConditionType.name][0]"
+								data-ng-init="EventModalCtrl.tmpResult = EventModalCtrl.carleonConditionResultParameters[EventModalCtrl.newConditionType.name][0]"
 								data-ng-model="EventModalCtrl.tmpResult"
-								data-ng-options="parameter as EventModalCtrl.tr(parameter.title) for parameter in EventModalCtrl.carleonResultParameters[EventModalCtrl.newConditionType.name]">
+								data-ng-options="parameter as EventModalCtrl.tr(parameter.title) for parameter in EventModalCtrl.carleonConditionResultParameters[EventModalCtrl.newConditionType.name]">
 						</select>
 					</div>
 				</div>
