--- a/src/components/event/event.modal.html
+++ b/src/components/event/event.modal.html
@@ -364,10 +364,10 @@
 								class="form-control"
 								data-ng-model="EventModalCtrl.newCondition.condition">
 							<option value="==">==</option>
-							<option value="<"><</option>
-							<option value="<="><=</option>
-							<option value=">">></option>
-							<option value=">=">>=</option>
+							<option value="<">&lt;</option>
+							<option value="<=">&lt;=</option>
+							<option value=">">&gt;</option>
+							<option value=">=">&gt;=</option>
 						</select>
 					</div>
 					<div class="col-md-4">
@@ -400,8 +400,8 @@
 							<option value="==">==</option>
 							<option value="<"><</option>
 							<option value="<="><=</option>
-							<option value=">">></option>
-							<option value=">=">>=</option>
+							<option value=">">&gt;</option>
+							<option value=">=">&gt;=</option>
 						</select>
 					</div>
 					<div class="col-md-4">
@@ -467,10 +467,10 @@
 								class="form-control"
 								data-ng-model="EventModalCtrl.newCondition.condition">
 							<option value="==">==</option>
-							<option value="<"><</option>
-							<option value="<="><=</option>
-							<option value=">">></option>
-							<option value=">=">>=</option>
+							<option value="<">&lt;</option>
+							<option value="<=">&lt;=</option>
+							<option value=">">&gt;</option>
+							<option value=">=">&gt;=</option>
 						</select>
 					</div>
 					<div class="col-md-4">
@@ -537,10 +537,10 @@
 								data-ng-model="EventModalCtrl.newCondition.condition"
 								data-ng-if="EventModalCtrl.tmpResult.type === 'real' || EventModalCtrl.tmpResult.type === 'integer'">
 							<option value="==">==</option>
-							<option value="<"><</option>
-							<option value="<="><=</option>
-							<option value=">">></option>
-							<option value=">=">>=</option>
+							<option value="<">&lt;</option>
+							<option value="<=">&lt;=</option>
+							<option value=">">&gt;</option>
+							<option value=">=">&gt;=</option>
 						</select>
 						<select id="newConditionOperator"
 								name="newConditionOperator"
