--- a/src/components/event/event.modal.html
+++ b/src/components/event/event.modal.html
@@ -474,7 +474,7 @@
 						</select>
 					</div>
 					<div class="col-md-4">
-						<input id="newConditionSensorValue" class="form-control" name="newConditionSensorValue" type="number" min="0" max="100" size="3" data-ng-model="EventModalCtrl.newCondition.value">
+						<input id="newConditionSensorValue" class="form-control" name="newConditionSensorValue" type="number" min="0" max="100" size="3" step=".1" data-ng-model="EventModalCtrl.newCondition.value">
 					</div>
 				</div>
 			</div>
