--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -4,8 +4,8 @@
     <div class="row" data-ng-if="eventsCtrl.sagremorParams.adminMode">
 		<button type="button" class="btn btn-primary" name="addEvent" id="addEvent" data-ng-click="eventsCtrl.newEvent()" data-translate="events_button_add"></button>
     </div>
-    <hr>
-    <h2 data-translate="schedulers_title"></h2>
+    <hr data-ng-if="eventsCtrl.schedulerList.length > 0">
+    <h2 data-translate="schedulers_title" data-ng-if="eventsCtrl.schedulerList.length > 0"></h2>
     <div class="row">
         <div data-ng-repeat="scheduler in eventsCtrl.schedulerList track by $index" class="col-sm-2">
             <data-sag-container data-menu="eventsCtrl.menuScheduler"
@@ -17,8 +17,8 @@
 			</data-sag-container>
         </div>
     </div>
-    <hr>
-    <h2 data-translate="triggers_title"></h2>
+    <hr data-ng-if="eventsCtrl.triggerList.length > 0">
+    <h2 data-translate="triggers_title" data-ng-if="eventsCtrl.triggerList.length > 0"></h2>
     <div class="row">
         <div data-ng-repeat="trigger in eventsCtrl.triggerList track by $index" class="col-sm-2">
             <data-sag-container data-menu="eventsCtrl.menuTrigger"
