--- a/src/components/container/container.template.html
+++ b/src/components/container/container.template.html
@@ -1,6 +1,8 @@
 <div data-ng-class="{'sag-container': !$ctrl.dashboard, 'sag-container-dashboard': ($ctrl.dashboard && $ctrl.element.type !== 'script')}">
 	<div class="row">
-        <div class="sag-container-header-menu col-sm-2" data-ng-if="(!!$ctrl.menu && !$ctrl.dashboard) || $ctrl.dashboard && $ctrl.sagParams.adminMode" data-uib-dropdown>
+        <div class="sag-container-header-menu col-sm-2" 
+			 data-ng-if="(!!$ctrl.menu && !$ctrl.dashboard) || $ctrl.dashboard && $ctrl.sagParams.adminMode" 
+			 data-uib-dropdown>
             <button class="btn btn-primary text-left" type="button" data-uib-dropdown-toggle data-ng-click="">
 				<i class="fa fa-bars" aria-hidden="true"></i>
             </button>
