--- a/src/components/carleonMotion/carleonMotion.template.html
+++ b/src/components/carleonMotion/carleonMotion.template.html
@@ -30,7 +30,13 @@
 </div>
 <!-- type file, select file lists -->
 <div class="row control-group">
-	<div class="col-md-5">
+	<div class="col-md-1">
+	</div>
+	<div class="col-md-4">
+		<button type="button" class="btn btn-primary" data-ng-click="$ctrl.refresh()">
+			<span data-translate="carleon_motion_refresh"></span>
+			<i class="fa fa-refresh" aria-hidden="true"></i>
+		</button>
 	</div>
 	<div class="col-md-3 controls" data-ng-if="$ctrl.type === 'file' && $ctrl.fileListName.length > 1">
 		<div>
@@ -87,7 +93,9 @@
 	<div class="col-md-1">
 	</div>
 	<div class="col-md-10">
-		<img data-ng-src="{{$ctrl.selectedStream.uri}}" alt="{{$ctrl.selectedStream.name}}" class="img-responsive img-thumbnail">
+		<a href="" data-ng-click="$ctrl.openPopupImage($ctrl.selectedStream)" alt="{{$ctrl.selectedStream.name}}">
+			<img data-ng-src="{{$ctrl.selectedStream.uri}}" alt="{{$ctrl.selectedStream.name}}" class="img-responsive img-thumbnail">
+		</a>
 	</div>
 	<div class="col-md-1">
 	</div>
