Fix responsive bugs

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -20,6 +20,7 @@
                      data-gs-item-y="w.y"
                      data-gs-item-width="w.width"
                      data-gs-item-height="w.height"
+                     data-gs-min-width="3"
                      data-gs-item-autopos="0"
                      data-sag-type="{{w.type}}"
                      data-sag-device="{{w.device}}"
