eye candy improvement

--- a/src/components/dimmer/dimmer.less
+++ b/src/components/dimmer/dimmer.less
@@ -36,8 +36,8 @@
 	background-color:yellow;
 }
 
-.quarter:hover {
-	background-color:blue;
+.quarter:active {
+	background-color:red;
 }
 
 .quarter1 {
