--- a/src/components/heater/heater.less
+++ b/src/components/heater/heater.less
@@ -28,16 +28,8 @@
     cursor: pointer;
 }
 
-.quarter-off {
-	background-color:blue;
-}
-
-.quarter-on {
+.quarter:active {
 	background-color:yellow;
-}
-
-.quarter:hover {
-	background-color:blue;
 }
 
 .quarter-plus-1 {
