--- a/src/components/heater/heater.modal.html
+++ b/src/components/heater/heater.modal.html
@@ -4,20 +4,20 @@
     </div>
     <div class="modal-body">
         <div class="row control-group">
-            <span class="col-md-6" data-translate="heater_update_name"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="heater_update_name"></span>
+            <div class="col-xs-6 controls">
                 <input type="text" name="heaterDisplay" id="heaterDisplay" data-ng-model="HeatersModalCtrl.heater.newDisplay" class="modal-input-text form-control">
             </div>
         </div>
         <div class="row control-group">
-            <span class="col-md-6" data-translate="heater_update_unit"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="heater_update_unit"></span>
+            <div class="col-xs-6 controls">
                 <input type="text" name="heaterUnit" id="heaterUnit" data-ng-model="HeatersModalCtrl.heater.options.unit" class="modal-input-text form-control">
             </div>
         </div>
         <div class="row control-group">
-            <span class="col-md-6" data-translate="heater_update_enabled"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="heater_update_enabled"></span>
+            <div class="col-xs-6 controls">
 				<input type="checkbox" 
 						data-bs-switch 
 						class="form-control"
@@ -30,8 +30,8 @@
             <hr>
         </div>
         <div class="row control-group">
-            <span class="col-md-6" data-translate="heater_update_monitor"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="heater_update_monitor"></span>
+            <div class="col-xs-6 controls">
 				<input type="checkbox" 
 						data-bs-switch 
 						class="form-control"
@@ -41,8 +41,8 @@
             </div>
         </div>
         <div class="row control-group" data-ng-if="HeatersModalCtrl.heater.monitored">
-            <span class="col-md-6" data-translate="heater_update_monitor_every"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="heater_update_monitor_every"></span>
+            <div class="col-xs-6 controls">
                 <select id="bddAddUserGrant"
 						class="form-control"
 						data-ng-model="HeatersModalCtrl.heater.monitored_every"
