--- a/src/components/modals/image.modal.html
+++ b/src/components/modals/image.modal.html
@@ -4,12 +4,12 @@
     </div>
     <div class="modal-body">
 		<div class="row control-group">
-			<div class="col-md-1">
+			<div class="col-xs-1">
 			</div>
-			<div class="col-md-10">
+			<div class="col-xs-10">
 				<img data-ng-src="{{ImageModalCtrl.element.uri}}" alt="{{ImageModalCtrl.element.name}}" class="img-responsive img-thumbnail">
 			</div>
-			<div class="col-md-1">
+			<div class="col-xs-1">
 			</div>
 		</div>
     </div>
