--- a/src/components/sensor/sensor.modal.html
+++ b/src/components/sensor/sensor.modal.html
@@ -4,20 +4,20 @@
     </div>
     <div class="modal-body">
         <div class="row control-group">
-            <span class="col-md-6" data-translate="sensor_update_name"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="sensor_update_name"></span>
+            <div class="col-xs-6 controls">
                 <input type="text" name="sensorDisplay" id="sensorDisplay" data-ng-model="SensorsModalCtrl.sensor.newDisplay" class="modal-input-text form-control">
             </div>
         </div>
         <div class="row control-group">
-            <span class="col-md-6" data-translate="sensor_update_unit"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="sensor_update_unit"></span>
+            <div class="col-xs-6 controls">
                 <input type="text" name="sensorUnit" id="sensorUnit" data-ng-model="SensorsModalCtrl.sensor.options.unit" class="modal-input-text form-control">
             </div>
         </div>
         <div class="row control-group">
-            <span class="col-md-6" data-translate="sensor_update_enabled"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="sensor_update_enabled"></span>
+            <div class="col-xs-6 controls">
 				<input type="checkbox" 
 						data-bs-switch 
 						class="form-control"
@@ -30,8 +30,8 @@
             <hr>
         </div>
         <div class="row control-group">
-            <span class="col-md-6" data-translate="sensor_update_monitor"></span>
-            <div class="col-md-6">
+            <span class="col-xs-6" data-translate="sensor_update_monitor"></span>
+            <div class="col-xs-6">
 				<input type="checkbox" 
 						data-bs-switch 
 						class="form-control"
@@ -41,8 +41,8 @@
             </div>
         </div>
         <div class="row control-group" data-ng-if="SensorsModalCtrl.sensor.monitored">
-            <span class="col-md-6" data-translate="sensor_update_monitor_every"></span>
-            <div class="col-md-6">
+            <span class="col-xs-6" data-translate="sensor_update_monitor_every"></span>
+            <div class="col-xs-6">
                 <select id="bddAddUserGrant"
 						class="form-control"
 						data-ng-model="SensorsModalCtrl.sensor.monitored_every"
