--- a/src/app/parameters/parameters.html
+++ b/src/app/parameters/parameters.html
@@ -5,26 +5,26 @@
     <h3 data-translate="param_submodule_title"></h3>
     <div class="container">
       <div class="row">
-          <div class="col-md-2">
+          <div class="col-xs-2">
               <label for="submodule-benoic" data-translate="param_submodule_benoic"></label>
           </div>
-          <div class="col-md-2">
+          <div class="col-xs-2">
               <input data-ng-change="ParametersCtrl.submoduleEnable('benoic')" id="submodule-benoic" name="submodule-benoic" data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.submodules.benoic.enabled">
           </div>
       </div>
       <div class="row">
-          <div class="col-md-2">
+          <div class="col-xs-2">
               <label for="submodule-carleon" data-translate="param_submodule_carleon"></label>
           </div>
-          <div class="col-md-2">
+          <div class="col-xs-2">
               <input data-ng-change="ParametersCtrl.submoduleEnable('carleon')" id="submodule-carleon" name="submodule-carleon" data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.submodules.carleon.enabled">
           </div>
       </div>
       <div class="row">
-          <div class="col-md-2">
+          <div class="col-xs-2">
               <label for="submodule-gareth" data-translate="param_submodule_gareth"></label>
           </div>
-          <div class="col-md-2">
+          <div class="col-xs-2">
               <input data-ng-change="ParametersCtrl.submoduleEnable('gareth')" id="submodule-gareth" name="submodule-gareth" data-toggle="toggle" data-bs-switch data-switch-size="mini" type="checkbox" data-ng-model="ParametersCtrl.submodules.gareth.enabled">
           </div>
       </div>
@@ -102,14 +102,14 @@
 		  <h3 data-ng-if="ParametersCtrl.deviceAdded && ParametersCtrl.deviceOptionListDisplay" data-translate="device_options_title"></h3>
 		  <div data-ng-if="ParametersCtrl.deviceAdded && ParametersCtrl.deviceOptionListDisplay" data-ng-repeat="(optionName, option) in ParametersCtrl.deviceOptionList track by optionName" class="container">
 			  <div class="row">
-				  <div class="col-md-3" data-ng-class="{'device-option-required': !option.optional}">{{ParametersCtrl.newDeviceType + "_" + option.name | translate}}</div>
-				  <div class="col-md-3" data-ng-if="option.type === 'string'">
+				  <div class="col-xs-3" data-ng-class="{'device-option-required': !option.optional}">{{ParametersCtrl.newDeviceType + "_" + option.name | translate}}</div>
+				  <div class="col-xs-3" data-ng-if="option.type === 'string'">
 					  <input type="text" data-ng-model="option.value" data-ng-required="!option.optional">
 				  </div>
-				  <div class="col-md-3" data-ng-if="option.type === 'numeric'">
+				  <div class="col-xs-3" data-ng-if="option.type === 'numeric'">
 					  <input type="number" data-ng-model="option.value" data-ng-required="!option.optional">
 				  </div>
-				  <div class="col-md-3" data-ng-if="option.type === 'boolean'">
+				  <div class="col-xs-3" data-ng-if="option.type === 'boolean'">
 					  <input data-toggle="toggle" type="checkbox" data-ng-model="option.value" data-ng-required="!option.optional">
 				  </div>
 			  </div>
