--- a/src/components/modals/monitor.modal.html
+++ b/src/components/modals/monitor.modal.html
@@ -4,10 +4,10 @@
     </div>
     <div class="modal-body">
 		<div class="row control-group">
-			<div class="col-md-6">
+			<div class="col-xs-6">
 				<label for="monitorSelectDuration" data-translate="monitor_select_duration"></label>
 			</div>
-			<div class="col-md-6 controls">
+			<div class="col-xs-6 controls">
 				<select id="monitorSelectDuration"
 						class="form-control"
 						data-ng-model="MonitorModalCtrl.duration"
