--- a/src/components/monitor/monitor.template.html
+++ b/src/components/monitor/monitor.template.html
@@ -1,10 +1,10 @@
 <div class="row control-group">
-	<div class="col-md-1">
+	<div class="col-xs-1">
 	</div>
-	<div class="col-md-5">
+	<div class="col-xs-5">
 		<label for="monitorSelectDuration" data-translate="monitor_select_duration"></label>
 	</div>
-	<div class="col-md-5 controls">
+	<div class="col-xs-5 controls">
 		<select id="monitorSelectDuration"
 				class="form-control"
 				data-ng-model="$ctrl.duration"
@@ -14,31 +14,31 @@
 	</div>
 </div>
 <div class="row control-group">
-	<div class="col-md-1">
+	<div class="col-xs-1">
 	</div>
-	<div class="col-md-2">
+	<div class="col-xs-2">
 		<label for="monitorNewElement" data-translate="monitor_new_element"></label>
 	</div>
-	<div class="col-md-3 controls">
+	<div class="col-xs-3 controls">
 		<select id="monitorNewElement"
 				class="form-control"
 				data-ng-model="$ctrl.newElement"
 				data-ng-options="element.display for element in $ctrl.elementListDisplayed">
 		</select>
 	</div>
-	<div class="col-md-3">
+	<div class="col-xs-3">
 		<select id="monitorNewElementColor"
 				class="form-control"
 				data-ng-model="$ctrl.newElementColor">
 			<option data-ng-repeat="color in $ctrl.colorList" style="background:{{color.value}}" value="{{color.value}}" data-ng-bind="$ctrl.tr(color.label)"></option>
 		</select>
 	</div>
-	<div class="col-md-3 controls">
+	<div class="col-xs-3 controls">
 		<button type="button" data-ng-click="$ctrl.addElement()" class="btn btn-primary" data-ng-disabled="!$ctrl.newElementValid()" data-translate="monitor_new_element_button"></button>
 	</div>
 </div>
 <div class="row text-center">
-    <div class="col-md-12">
+    <div class="col-xs-12">
         <canvas id="line" class="chart chart-bar" 
                 data-chart-dataset-override="$ctrl.datasetOverride"
                 data-chart-data="$ctrl.data"
