--- a/src/components/switch/switch.modal.html
+++ b/src/components/switch/switch.modal.html
@@ -4,14 +4,14 @@
     </div>
     <div class="modal-body">
         <div class="row control-group">
-            <span class="col-md-6" data-translate="switch_update_name"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="switch_update_name"></span>
+            <div class="col-xs-6 controls">
                 <input type="text" name="switcherDisplay" id="switcherDisplay" data-ng-model="SwitchesModalCtrl.switcher.newDisplay" class="modal-input-text form-control">
             </div>
         </div>
         <div class="row control-group">
-            <span class="col-md-6" data-translate="switch_update_enabled"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="switch_update_enabled"></span>
+            <div class="col-xs-6 controls">
 				<input type="checkbox" 
 						class="form-control"
 						data-bs-switch 
@@ -24,8 +24,8 @@
             <hr>
         </div>
         <div class="row control-group">
-            <span class="col-md-6" data-translate="switch_update_monitor"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="switch_update_monitor"></span>
+            <div class="col-xs-6 controls">
 				<input type="checkbox" 
 						class="form-control"
 						data-bs-switch 
@@ -35,8 +35,8 @@
             </div>
         </div>
         <div class="row control-group" data-ng-if="SwitchesModalCtrl.switcher.monitored">
-            <span class="col-md-6" data-translate="switch_update_monitor_every"></span>
-            <div class="col-md-6 controls">
+            <span class="col-xs-6" data-translate="switch_update_monitor_every"></span>
+            <div class="col-xs-6 controls">
                 <select id="bddAddUserGrant"
 						class="form-control"
 						data-ng-model="SwitchesModalCtrl.switcher.monitored_every"
